<resources>
    <string name="app_name">Craft Xchange</string>
    <string name="logo">Logo</string>
    <string name="description">What describes you the best?</string>
    <string name="desc_text">Description</string>
    <string name="or">or</string>
    <string name="artisan">Artisan</string>
    <string name="artisan_logo">Artisan Logo</string>
    <string name="buyer">Buyer</string>
    <string name="change_language">Change Language</string>
    <string name="need_help">Need help Deciding?</string>
    <string name="need_help2">Need help?</string>
    <string name="change_lang_desc">Change language icon</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="enter_username">Enter your registered mobile\nnumber or email id</string>
    <string name="next">Next</string>
    <string name="need">Need help ?</string>
    <string name="new_user">New User? Click here to register.</string>
    <string name="enter_password">Enter your password\nto login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_email">Enter your email id</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_otp">Enter OTP received in your email id</string>
    <string name="verify_proceed"><![CDATA[Verify & Proceed]]></string>
    <string name="reach_out_text">In case of any help</string>
    <string name="reach_out_button">Reach out to us</string>
    <string name="enter_new_password">Enter your new password</string>
    <string name="retype_pwd">Retype Password</string>
    <string name="about_yourself">Tell us about yourself</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="mobile">Mobile Number</string>
    <string name="alt_mobile">Alternate Contact Number</string>
    <string name="designation">Designation</string>
    <string name="comp_field">Fields are mandatory</string>
    <string name="text_nextup">Next up :</string>
    <string name="text_comp_details"> Company Details</string>
    <string name="about_company">Tell us about your company</string>
    <string name="compname">Brand/ Company Name</string>
    <string name="enter_gst">GST Number</string>
    <string name="enter_cin">CIN Number</string>
    <string name="pan">PAN Number</string>
    <string name="upload_logo_text">Upload your brand logo</string>
    <string name="specs_image_upload">"Image - PNG, JPEG - (1Mb Max) "</string>
    <string name="text_addr_details">Address Details</string>
    <string name="about_web">Provide your link for web presence?</string>
    <string name="text_skip_details">You can skip this step and add your links later in the profile section</string>
    <string name="weblink">Website link</string>
    <string name="sociallink">Social media link</string>
    <string name="complete">Complete</string>
    <string name="text_to_tnc"><![CDATA[By completing this form and signup\nprocess, you hereby agree to our \n]]></string>
    <string name="enter_address">What\'s your registered address?</string>
    <string name="text_web_details">Web details</string>
    <string name="addr1">Address Line 1</string>
    <string name="addr2">Address Line 2</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="country_text">Country</string>
    <string name="text_pincode">Pincode</string>
    <string name="success_tick">Success Tick</string>
    <string name="success_pwd_reset_msg">Your password was successfully reset</string>
    <string name="loginnow">Login now</string>
    <string name="confirmation_text">An email confirmation has been sent\nto your registered email id</string>
    <string name="poc">Buyer\'s Point of Contact : </string>
    <string name="contact">Contact Number</string>
    <string name="email">Email id</string>
    <string name="landmark">Landmark</string>
    <string name="district">District</string>
    <string name="buyer_logo">BuyerIcon</string>
    <string name="enter_artisan_id">Enter your artisan id</string>
    <string name="no_artisanId_text">if you don\'t have an\nartisan id get in touch with us</string>
    <string name="artisanId">"Artisan id : "</string>
    <string name="cluster">Cluster</string>
    <string name="address">Address</string>
    <string name="text_select_cat">Select category of artisanProducts you make</string>
    <string name="skip_text_artisan"><![CDATA[You can always do this step later, SKIP >]]></string>
    <string name="contactname">Contact Name</string>
    <string name="home">Home</string>
    <string name="enquiries">Enquiries</string>
    <string name="wishlist">Wishlist</string>
    <string name="chat">\tChat\t\t\t</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hi">Hi,</string>
    <string name="hi_without_comma">Welcome</string>
    <string name="my_profile">My Profile</string>
    <string name="my_transactions">My Transactions</string>
    <string name="my_orders">My Orders</string>
    <string name="custom_design">Custom Designs</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="support">Support</string>
    <string name="logout">Logout</string>
    <string name="action_notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="browse_text">Browse the latest collection of</string>
    <string name="choose_from">Choose from</string>
    <string name="unique_in_mind">Have something unique in mind?</string>
    <string name="customize_your_design">Share your design</string>
    <string name="skip">Skip</string>
    <string name="message_operation_not_supported_offline">Operation not supported in offline</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="enter_email_mobile">Enter your email/mobile numner</string>
    <string name="logout_text">Are your sure you want to logout?</string>
    <string name="profile_update_success">Profile updated successfully!</string>
    <string name="artisan_self_design">Artisan self design</string>
    <string name="explore">Explore</string>
    <string name="antaran_design_collec">Antaran co-design</string>
    <string name="user">Guest</string>
    <string name="edit_profile">Edit profile</string>
    <string name="artisan_rating_text">Avg. rating by artisans</string>
    <string name="general">General</string>
    <string name="brand">Brand</string>
    <string name="delivery">Delivery</string>
    <string name="reg_addr">Registered address</string>
    <string name="delivery_addr">Delivery address</string>
    <string name="detials_of_poc">Details for point of contact</string>
    <string name="name">Name</string>
    <string name="pwd_validation_text">Please Enter Valid Password with 8 characters.It should contain atleast Capital alphabet,number and special character</string>
    <string name="otp_send_success">OTP sent successfully!</string>
    <string name="pincode_invalid_text">"Invalid pincode"</string>
    <string name="pan_invalid_text">"Invalid Pan number"</string>
    <string name="gst_invalid_text">"Invalid GST number"</string>
    <string name="cin_invalid_text">"Invalid CIN number"</string>
    <string name="link_invalid_text">"Invalid link"</string>
    <string name="mobile_no_invalid_text">Invalid mobile number</string>
    <string name="enter_valid_details">Enter Valid Details</string>
    <string name="file_size_exceeded">File size exceeded 1Mb</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="alphaNumeric">ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="alphaNumeric2">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789</string>
    <string name="hello">Hello</string>
    <string name="your_product">Your Products</string>
    <string name="list_prod_text">List of your very own products sorted by categories</string>
    <string name="registration_success_msg">Registration Successful!</string>
    <string name="my_details">My Details</string>
    <string name="brand_details">Brand Details</string>
    <string name="bank_details">Bank Details</string>
    <string name="edit_details">Edit Details</string>
    <string name="add_new_prod">Add a new product</string>
    <string name="avg_rating">Avg rating</string>
    <string name="product_category">Product Category</string>
    <string name="edit_brand_details">Edit Brand Details</string>
    <string name="details_bank">Bank Details</string>
    <string name="account_no">Account Number</string>
    <string name="bank_name">Bank Name</string>
    <string name="benificiary_name">Beneficiary Name</string>
    <string name="branch">Branch</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="digital_payment_details">Digital Payment Details</string>
    <string name="edit_bank_details">Edit Bank Details</string>
    <string name="change_brand_logo">Change Brand\nProfile Image</string>
    <string name="gpay_field">Google Pay UPI Id</string>
    <string name="paytm_field">Paytm Registered Mobile Number</string>
    <string name="phonepe_field">PhonePe UPI Id</string>
    <string name="remove_photo">Remove Photo</string>
    <string name="change_profile_text">Change Profile Photo</string>
    <string name="artisan_self_design_collection">Artisan Self Design</string>
    <string name="regions">Regions</string>
    <string name="categories">Categories</string>
    <string name="artisan_brands">Artisan Brands</string>
    <string name="antaran_co_design_collection">Antaran Co Design</string>
    <string name="view_more">View More</string>
    <string name="generate_enquiry">Generate Enquiry</string>
    <string name="available_in_stock">Avalaible in stock</string>
    <string name="in_stock">In Stock</string>
    <string name="exclusively_enter">Exclusively\n</string>
    <string name="exclusively">Exclusively\t</string>
    <string name="you_can_check_again_by_clicking_on_cancel">You can check again by clicking on \'Cancel\'</string>
    <string name="save_n_upload">Save &amp; upload it?</string>
    <string name="ok">Ok</string>
    <string name="are_you_sure_you_want_to_go_back">Are you sure you want to go back?</string>
    <string name="go_back">Go back</string>
    <string name="you_shal_lose">You shall lose all your progress as it is not saved yet. If you don\'t want to lose, you can save it before going back!</string>
    <string name="describe_your_product">Describe your product</string>
    <string name="weight_10_characters">Weight (10 Characters)  </string>
    <string name="enter_gsm_value">Enter GSM value</string>
    <string name="enquiry_generated_success">Enquiry generated\nsucessfully!</string>
    <string name="enquiry_id">Enquiry Id\t</string>
    <string name="refer_to_ongoing_enquiries">Please refer \"Ongoing Enquiry\" tab\nto track your enquiry.</string>
    <string name="view_enquiry">View Enquiry</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="sure">Sure?</string>
    <string name="review_beofre_sending_faulty">If you want to review before\nsending, you can still do it.</string>
    <string name="review_beofre_sending_faulty_second">Please note that, if the order is beyond repair or the\nissue is not addressable, we would escalate it to the\nadmin. The final decision shall be an agreement.</string>
    <string name="yes_submit">Yes, submit!</string>
    <string name="new_escalation">New Escalation</string>
    <string name="note_confirm_escalation">The time limit for this escalation to be resolved is 48hrs after you escalate. Else it will be highlighted to the Tata Trusts Management Team.</string>
</resources>