<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/action_enquiries"
        android:enabled="true"
        android:icon="@drawable/ic_receipt"
        android:title="@string/enquiries"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/action_wishlist"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_border"
        android:title="@string/wishlist"
        app:showAsAction="ifRoom|withText"/>


    <item
        android:id="@+id/action_chat"
        android:enabled="true"
        android:icon="@drawable/ic_chat_bubble_outline"
        android:title="@string/chat"
        app:showAsAction="ifRoom|withText"/>

</menu>