<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/fab_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/margin_regular"
        android:fontFamily="@font/playfair_regular"
        android:text="@string/save_n_upload"
        android:textColor="@color/clickable_text_color"
        android:textSize="28sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_regular"
        android:text="@string/you_can_check_again_by_clicking_on_cancel"
        android:textColor="@color/black_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2.5">
        <TextView
            android:padding="4dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rectangle_round_grad"
            android:textColor="@color/black_text"
            android:text="@string/cancel"/>
        <view
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.50"/>.
        <TextView
            android:padding="4dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rect_round_grad_blue_solid"
            android:textColor="@color/white_text"
            android:text="@string/ok"/>

    </LinearLayout>

</LinearLayout>