<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:padding="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/enquiry_generated_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_regular"
        android:fontFamily="@font/playfair_regular"
        android:text="@string/enquiry_generated_success"
        android:textAlignment="center"
        android:textColor="@color/dark_green"
        android:textSize="@dimen/title_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/success_enquiry_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_regular"
        android:text="@string/enquiry_id"
        android:textSize="@dimen/product_description_text"
        android:textAlignment="center"
        android:fontFamily="@font/lato_regular"
        app:layout_constraintEnd_toEndOf="@+id/enquiry_generated_text"
        app:layout_constraintStart_toStartOf="@id/enquiry_generated_text"
        app:layout_constraintTop_toBottomOf="@+id/enquiry_generated_text" />

    <TextView
        android:id="@+id/refer_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_regular"
        android:text="@string/refer_to_ongoing_enquiries"
        android:textSize="@dimen/product_availability_text"
        android:fontFamily="@font/lato_regular"
        android:textAlignment="center"
        android:textColor="@color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/success_enquiry_id"
        app:layout_constraintStart_toStartOf="@id/success_enquiry_id"
        app:layout_constraintEnd_toEndOf="@id/success_enquiry_id"/>

    <LinearLayout
        android:id="@+id/btn_layer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_regular"
        android:layout_marginBottom="@dimen/margin_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/refer_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:weightSum="4.5">

        <Button
            android:id="@+id/btn_success_cancel"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="2"
            android:background="@drawable/rectangle_round_small"
            android:fontFamily="@font/lato_regular"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textSize="@dimen/product_availability_text" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25" />

        <Button
            android:id="@+id/btn_success_view_enquiry"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="2.25"
            android:text="@string/view_enquiry"
            android:fontFamily="@font/lato_regular"
            android:textAllCaps="false"
            android:textSize="@dimen/product_availability_text"
            android:textColor="@color/white_text"
            android:background="@drawable/rect_round_grad_blue_solid"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>